@@ -42,7 +42,7 @@ import org.slf4j.LoggerFactory;
 
 public final class SplunkSinkTask extends SinkTask implements PollerCallback {
     private static final Logger log = LoggerFactory.getLogger(SplunkSinkTask.class);
-    private static long flushWindow = 30 * 1000; // 30 seconds
+    private static long flushWindow = Long.valueOf(30) * 1000; // 30 seconds
     private static final String HEADERTOKEN = "$$$";
 
     private HecInf hec;
@@ -71,7 +71,7 @@ public final class SplunkSinkTask extends SinkTask implements PollerCallback {
         tracker = new KafkaRecordTracker();
         bufferedRecords = new ArrayList<>();
         if(connectorConfig.flushWindow > 0) {
-            flushWindow = connectorConfig.flushWindow * 1000; // Flush window set to user configured value (Multiply by 1000 as all the calculations are done in milliseconds)
+            flushWindow = connectorConfig.flushWindow * Long.valueOf(1000); // Flush window set to user configured value (Multiply by 1000 as all the calculations are done in milliseconds)
         }
 
         log.info("kafka-connect-splunk task starts with config={}", connectorConfig);
@@ -569,10 +569,9 @@ public final class SplunkSinkTask extends SinkTask implements PollerCallback {
 
         if (connectorConfig.timestampFormat.equalsIgnoreCase("epoch")) {
             try {
-                double epoch;
-                epoch = ((Double.parseDouble(timestamp)));
-                long long_epoch = (new Double(epoch)).longValue();
-                event.setTime(epoch / (Math.pow(10, Long.toString(long_epoch).length()-10)));
+                double epoch = (Double.parseDouble(timestamp));
+                long long_epoch = Double.valueOf(epoch).longValue();
+                event.setTime(epoch / (Math.pow(10, Long.toString(long_epoch).length()-10.00)));
                 
             } catch (Exception e) {
                 log.warn("Could not set the time", e);
